<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.androidbootcamp.customaryconversionsericw.MainActivity">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textTitle"
        android:layout_alignRight="@+id/textTitle"
        android:layout_alignTop="@+id/txtTitle"
        android:layout_marginBottom="14dp"
        android:layout_marginEnd="85dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="14dp"
        android:layout_toEndOf="@+id/txtTitle"
        android:layout_toRightOf="@+id/txtTitle"
        android:entries="@array/txtConvertList"
        android:prompt="@string/txtConvertEnter"
        android:spinnerMode="dialog"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toTopOf="@+id/txtTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="@dimen/activity_horizontal_margin"
        android:layout_height="@dimen/activity_vertical_margin"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:layout_marginEnd="43dp"
        android:layout_marginStart="44dp"
        android:text="@string/txtTitle"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <EditText
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textTitle"
        android:layout_alignStart="@+id/textTitle"
        android:layout_below="@+id/textTitle"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="125dp"
        android:layout_marginStart="126dp"
        android:layout_marginTop="14dp"
        android:hint="@string/txtEntry"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/btnConvert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="229dp"
        android:layout_height="201dp"
        android:layout_marginBottom="26dp"
        android:layout_marginEnd="92dp"
        android:layout_marginStart="63dp"
        android:contentDescription="@string/imageView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/playstoreicon" />

    <Button
        android:id="@+id/btnConvert"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="148dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="15dp"
        android:text="@string/btnConvert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <TextView
        android:id="@+id/myAnswer"
        android:layout_width="289dp"
        android:layout_height="34dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="47dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="22dp"
        android:text="@string/myAnswer"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConvert" />

</android.support.constraint.ConstraintLayout>
